F# Day 03, part one

--- a/AdventOfCode.FSharp/AdventOfCode.FSharp.fsproj
+++ b/AdventOfCode.FSharp/AdventOfCode.FSharp.fsproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Compile Include="Y23\D02\Day02.fs" />
+    <Compile Include="Y23\D03\Day03.fs" />
   </ItemGroup>
 
 </Project>
